refactor(writer): compose runtime explicitly at boot